--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+.gallery-img {
+    width:100%;
+    height:auto;
+    
+    box-shadow:-3px 5px 15px #000;
+    cursor: pointer;
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
+  }
+
+  .shadow-it{
+    box-shadow:-3px 5px 15px #000;
+  }
+
+  @layer utilities {
+    .scrollbar::-webkit-scrollbar {
+      
+      width: 5px;
+      height: 10px;
+    }
+  
+    .scrollbar::-webkit-scrollbar-track {
+      
+      border-radius: 100vh;
+      /* background: rgb(0 0 0/0.25); */
+    }
+  
+    .scrollbar::-webkit-scrollbar-thumb {
+      background:  rgb(0 0 0 / 0.1);
+      border-radius: 100vh;
+      
+    }
+
+    .scrollbar-white::-webkit-scrollbar-thumb {
+      background: rgb(255 255 255 /.5) ;
+      border-radius: 100vh;
+      
+    }
+  
+    .scrollbar::-webkit-scrollbar-thumb:hover {
+      background: rgb(0 0 0 / 0.2);
+    }
+  }
